# scheduality

./: Cargo.toml  README.md  schema.sql
schema/: functions.sql  tables.sql  views.sql
src/: commands.rs  db.rs  events.rs  main.rs  modals.rs  utils.rs
