[package]
name = "scheduality"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.68"
poise = "0.6.1"
tracing = "0.1.37"
tokio = { version = "1.26.0", features = ["rt-multi-thread"] }
serde = "1.0.200"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio"] }
